更换应用名称和logo

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">GizwitsSDK</string>
+    <string name="app_name">空调机组远程监控</string>
     <string name="devicedisconnected">未连接</string>
 </resources>
